Aggiornato menù e reintegrato asporto

--- a/asporto/index.html
+++ b/asporto/index.html
@@ -73,28 +73,28 @@
 <!-- fine navbar con hamburger -->
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
-            <!-- <div class="small-12 columns">
+            <div class="small-12 columns">
                 <h1 class="text-highlight" itemprop="description">Hamburger a casa tua.<br>Caldo, in meno di 30 minuti.</h1>
-            </div> -->
+            </div>
         </div>
     </header>
     <div class="panel-asporto">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporto</h1>
+                <h1>Asporto e Consegne a Domicilio</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
-                <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
-                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
+                <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4>
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
-                <h4><strong>Servizio consegna a domicilio:</strong> riprenderà il 15 Ottobre</h4>
+                <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
+                <h4>Effettuiamo le consegne a Filottrano, Sant'Ignazio, Imbrecciata, Montoro e San Biagio.</h4>
             </div>
         </div>
         <div class="row">
@@ -119,11 +119,15 @@
                     <h2 class="subheader">Per Stuzzicare</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Bocconcini di Pollo &emsp; 5</h3>
+                            <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
+                            <p>sHamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
+                        </li>
+                        <li>
+                            <h3>Bocconcini di Pollo &emsp; 5,5</h3>
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                            <h3>Peperoncini Piccanti &emsp; 5</h3>
                             <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
@@ -135,12 +139,16 @@
                             <p>servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
-                            <h3>Ratatouille &emsp; 4,5</h3>
-                            <p>Verdura fresca tagliata a dadi e cotta al forno</p>
+                            <h3>Chili &emsp; 5,5</h3>
+                            <p>Carne e fagioli</p>
                         </li>
                         <li>
-                            <h3>Anelli di Cipolla &emsp; 4,5</h3>
-                            <p>anelli di cipolla dorata impanati</p>
+                            <h3>Cipolle Rosse &emsp; 4,5</h3>
+                            <p>cipolla rossa in tempura</p>
+                        </li>
+                        <li>
+                            <h3>Verdure in Tempura &emsp; 6,5</h3>
+                            <p>friggitelli, borragine, cipolla rossa, cavolfiore e patatine</p>
                         </li>
                         <li>
                             <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
@@ -158,8 +166,12 @@
                     <h2 class="subheader">Hamburger (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
+                            <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
                             <p>manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>Pulled Pork &emsp; 10,5</h3>
+                            <p>maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
                         </li>
                         <li>
                             <h3>New York &emsp; 8,9 / doppio 14,9</h3>
@@ -170,16 +182,16 @@
                             <p>manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Greco &emsp; 8,9 / doppio 14,9</h3>
-                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
+                            <p>mignonanzo, scamorza, crema di funghi, speck croccante</p>
                         </li>
                         <li>
-                            <h3>Cacio e Pepe &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, pecorino vallesina, guanciale, pepe</p>
+                            <h3>Carbonara &emsp; 10,9 / doppio 14,9</h3>
+                            <p>manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
                         </li>
                         <li>
-                            <h3>Estivo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli.</p>
+                            <h3>Mantovano &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, gorgonzola, crema di zucca, amaretto, speck croccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
@@ -227,10 +239,10 @@
                             <h3>Tagliata di Picanha &emsp; 19</h3>
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
-<!--                         <li>
+                        <li>
                             <h3>Cotoletta alla Milanese &emsp; 21</h3>
                             <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -240,16 +252,16 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Cioccolatosa &emsp; 5</h3>
-                                <p>doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
+                                <h3>Blondie &emsp; 5</h3>
+                                <p>brownie con nocciole, servito con mousse di crema chantilly</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
                                 <p>cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
                             </li>
                             <li>
-                                <h3>Blondie &emsp; 5</h3>
-                                <p>brownie con nocciole, servito con mousse di crema chantilly.</p>
+                                <h3>Zuppa Inglese &emsp; 5</h3>
+                                <p>Morbide creme pasticcere su pan di spagna bagnato in alchermes</p>
                             </li>
                         </ul>
                     </div>
