--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
 			</div>
 			<div class="medium-6 large-6 columns">
-				<h2>Asporto</h2>
-				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
-				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p>
-				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
-				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
+				<h2>Asporto e Consegne</h2>
+				<!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
+				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
+				<p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p>
+				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
 			</div>
 		</div>
 		<div class="row">
