--- a/menu/index.html
+++ b/menu/index.html
@@ -112,11 +112,15 @@
                     <h2 class="subheader">Per Stuzzicare</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Bocconcini di Pollo &emsp; 5</h3>
+                            <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
+                            <p>sHamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
+                        </li>
+                        <li>
+                            <h3>Bocconcini di Pollo &emsp; 5,5</h3>
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Peperoncini Piccanti &emsp; 4,5</h3>
+                            <h3>Peperoncini Piccanti &emsp; 5</h3>
                             <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
@@ -128,12 +132,16 @@
                             <p>servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
-                            <h3>Ratatouille &emsp; 4,5</h3>
-                            <p>Verdura fresca tagliata a dadi e cotta al forno</p>
+                            <h3>Chili &emsp; 5,5</h3>
+                            <p>Carne e fagioli</p>
                         </li>
                         <li>
-                            <h3>Anelli di Cipolla &emsp; 4,5</h3>
-                            <p>anelli di cipolla dorata impanati</p>
+                            <h3>Cipolle Rosse &emsp; 4,5</h3>
+                            <p>cipolla rossa in tempura</p>
+                        </li>
+                        <li>
+                            <h3>Verdure in Tempura &emsp; 6,5</h3>
+                            <p>friggitelli, borragine, cipolla rossa, cavolfiore e patatine</p>
                         </li>
                         <li>
                             <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
@@ -151,8 +159,12 @@
                     <h2 class="subheader">Hamburger (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
+                            <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
                             <p>manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>Pulled Pork &emsp; 10,5</h3>
+                            <p>maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
                         </li>
                         <li>
                             <h3>New York &emsp; 8,9 / doppio 14,9</h3>
@@ -163,16 +175,16 @@
                             <p>manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Greco &emsp; 8,9 / doppio 14,9</h3>
-                            <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3>
+                            <p>mignonanzo, scamorza, crema di funghi, speck croccante</p>
                         </li>
                         <li>
-                            <h3>Cacio e Pepe &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, pecorino vallesina, guanciale, pepe</p>
+                            <h3>Carbonara &emsp; 10,9 / doppio 14,9</h3>
+                            <p>manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
                         </li>
                         <li>
-                            <h3>Estivo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli.</p>
+                            <h3>Mantovano &emsp; 10,5 / doppio 14,9</h3>
+                            <p>manzo, gorgonzola, crema di zucca, amaretto, speck croccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
@@ -220,10 +232,10 @@
                             <h3>Tagliata di Picanha &emsp; 19</h3>
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Cotoletta alla Milanese &emsp; 21</h3>
                             <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>
                             <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
@@ -237,20 +249,20 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Cioccolatosa &emsp; 5</h3>
-                                <p>doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
+                                <h3>Birramisù &emsp; 5</h3>
+                                <p>tiramisù con mascarpone artigianale alla birra stout</p>
                             </li>
                             <li>
                                 <h3>Blondie &emsp; 5</h3>
-                                <p>brownie con nocciole, servito con mousse di crema chantilly.</p>
+                                <p>brownie con nocciole, servito con mousse di crema chantilly</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
                                 <p>cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
                             </li>
                             <li>
-                                <h3>Crumble &emsp; 5</h3>
-                                <p>crema chantilly con scaglie di cioccolato su croccante crumble di farina di mais, cannella e cioccolato fondente.</p>
+                                <h3>Zuppa Inglese &emsp; 5</h3>
+                                <p>Morbide creme pasticcere su pan di spagna bagnato in alchermes</p>
                             </li>
                             <li>
                                 <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
