--- a/menu/index.html
+++ b/menu/index.html
@@ -420,12 +420,16 @@
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Costa Verde DOC &emsp;18</h3>
+                            <h3>Costa Verde DOC &emsp;12,5</h3>
                             <p>tavignano</p>
                         </li>
                         <li>
                             <h3>Misco Superiore DOC &emsp;18</h3>
                             <p>tavignano</p>
+                        </li>
+                        <li>
+                            <h3>Gewurztraminer DOC &emsp;18</h3>
+                            <p>H.Lun</p>
                         </li>
                         <li>
                             <h3>Prosecco Trèser DOCG &emsp;15</h3>
