--- a/menu/index.html
+++ b/menu/index.html
@@ -113,39 +113,39 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
-                            <p>sHamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
+                            <p>Hamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
                         </li>
                         <li>
                             <h3>Bocconcini di Pollo &emsp; 5,5</h3>
-                            <p>serviti con salsa piccante</p>
+                            <p>Serviti con salsa piccante</p>
                         </li>
                         <li>
                             <h3>Peperoncini Piccanti &emsp; 5</h3>
-                            <p>peperoncini ripieni di robiola avvolti nella pancetta</p>
+                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
                         <li>
                             <h3>Olive all'Ascolana &emsp; 5</h3>
-                            <p>il più tipico street food marchigiano</p>
+                            <p>Il più tipico street food marchigiano</p>
                         </li>
                         <li>
                             <h3>Mozzarelle Fritte &emsp; 5,5</h3>
-                            <p>servite con salsa aioli fatta in casa</p>
+                            <p>Servite con salsa aioli fatta in casa</p>
                         </li>
                         <li>
                             <h3>Cipolle Rosse &emsp; 4,5</h3>
-                            <p>cipolla rossa in tempura</p>
+                            <p>Cipolla rossa in tempura</p>
                         </li>
                         <li>
                             <h3>Crostini con Erbe di Campo &emsp; 4,5</h3>
-                            <p>crostini con erbe di campo strascinate</p>
+                            <p>Crostini con erbe di campo strascinate</p>
                         </li>
                         <li>
                             <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
-                            <p>servite con salsa alla senape fatta in casa</p>
+                            <p>Servite con salsa alla senape fatta in casa</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>
-                            <p>patate fritte con buccia</p>
+                            <p>Patate fritte con buccia</p>
                         </li>
                     </ul>
                 </div>
@@ -156,11 +156,11 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Mini Burger e Patatine &emsp; 6,5</h3>
-                            <p>manzo (100 grammi), cheddar, servito con patate fritte</p>
+                            <p>Manzo (100 grammi), cheddar, servito con patate fritte</p>
                         </li>
                         <li>
                             <h3>Bocconcini e Patatine &emsp; 6,5</h3>
-                            <p>bocconcini di pollo fatti in casa, serviti con patate fritte</p>
+                            <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
                         </li>
                     </ul>
                 </div>
@@ -171,19 +171,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
-                            <p>manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
+                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
                             <h3>New York &emsp; 8,9 / doppio 14,9</h3>
-                            <p>manzo, cheddar, cipolla caramellata, insalata</p>
+                            <p>Manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
                             <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
+                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
-                            <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                     </ul>
                 </div>
@@ -194,19 +194,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Pulled Pork &emsp; 10,5</h3>
-                            <p>maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
+                            <p>Maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
                         </li>
                         <li>
                             <h3>Inverno &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, pecorino, bacon croccante, erbe di campo strascinate</p>
+                            <p>Manzo, pecorino, bacon croccante, erbe di campo strascinate</p>
                         </li>
                         <li>
                             <h3>Carbonara &emsp; 10,9 / doppio 14,9</h3>
-                            <p>manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
+                            <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
                         </li>
                         <li>
                             <h3>Deciso &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, gorgonzola, guanciale croccante, pomodorini confit</p>
+                            <p>Manzo, gorgonzola, guanciale croccante, pomodorini confit</p>
                         </li>
                     </ul>
                 </div>
@@ -217,19 +217,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di cicoria</p>
+                            <p>Hamburger di borlotti, julienne di cipolla fritta, crema di cicoria</p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa &emsp; 8,9</h3>
-                            <p>hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele</p>
+                            <p>Hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele</p>
                         </li>
                         <li>
                             <h3>Salmone &emsp; 13,5 / doppio 17,9</h3>
-                            <p>hamburger di salmone (150 grammi), citronette agli agrumi, capperi e insalata riccia</p>
+                            <p>Hamburger di salmone (150 grammi), citronette agli agrumi, capperi e insalata riccia</p>
                         </li>
                         <li>
                             <h3>Persico &emsp; 12,5 / doppio 16,5</h3>
-                            <p>hamburger di persico (150 grammi), salsa di tonno, acciughe e capperi; insalata riccia</p>
+                            <p>Hamburger di persico (150 grammi), salsa di tonno, acciughe e capperi; insalata riccia</p>
                         </li>
                     </ul>
                 </div>
@@ -240,19 +240,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine &emsp; 13,9</h3>
-                            <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
+                            <p>Baby ribs di suino allevato allo stato brado in salsa bbq. Servite con patate fritte</p>
                         </li>
                         <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>
-                            <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
+                            <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
                         </li>
                         <li>
                             <h3>Cotoletta alla Milanese &emsp; 21</h3>
-                            <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
+                            <p>Costoletta di vitello con osso impanata e cotta nel burro chiarificato. Servita con insalata e patate fritte</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>
-                            <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
+                            <p>Fiorentina di manzo. <br>Cottura: molto al sangue o al sangue</p>
                         </li>
                     </ul>
                 </div>
@@ -264,23 +264,23 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Birramisù &emsp; 5</h3>
-                                <p>tiramisù con mascarpone artigianale alla birra stout</p>
+                                <p>Tiramisù con mascarpone artigianale alla birra stout</p>
                             </li>
                             <li>
                                 <h3>Blondie &emsp; 5</h3>
-                                <p>brownie con nocciole, servito con mousse di crema chantilly</p>
+                                <p>Brownie con nocciole, servito con mousse di crema chantilly</p>
                             </li>
                             <li>
                                 <h3>Cheesecake &emsp; 5</h3>
-                                <p>cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
+                                <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
                             </li>
                             <li>
                                 <h3>Whoop &emsp; 5</h3>
-                                <p>morbido biscotto di cioccolato ripieno con crema di  burro di arichidi</p>
+                                <p>Morbido biscotto di cioccolato ripieno con crema di  burro di arichidi</p>
                             </li>
                             <li>
                                 <h3>Biscotti Secchi e Visciola &emsp; 5,5</h3>
-                                <p>cantucci e anicetti artigianali, serviti con vino di visciole</p>
+                                <p>Cantucci e anicetti artigianali, serviti con vino di visciole</p>
                             </li>
                         </ul>
                         <blockquote>
