--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
+				<p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 4, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
 			</div>
 		</div>
 		<div class="row">
