--- a/asporto/index.html
+++ b/asporto/index.html
@@ -80,6 +80,12 @@
     </header>
     <div class="panel-asporto">
         <div class="row">
+            <div class="medium-12 large-12 columns panel clearfix">
+                <h1>Chiusura festività</h1>
+                <p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 4, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
+            </div>
+        </div>
+        <div class="row">
             <div class="medium-12 large-12 columns">
                 <h1>Asporto e Consegne a Domicilio</h1>
                 <hr>
