--- a/menu/index.html
+++ b/menu/index.html
@@ -71,13 +71,19 @@
     </nav>
 <!-- fine navbar con hamburger -->
     <img class="image-hero" src="https://www.beerstrot.it/asset/img/large/menu.jpg" alt="Ca' Vecchia Beerstrot Hamburger doppio"/>
-    <header class="row">
+    <div class="row">
+        <div class="medium-12 large-12 columns panel clearfix">
+            <h1>Chiusura festività</h1>
+            <p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 4, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
+        </div>
+    </div>
+    <div class="row">
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
             <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
         </div>
-    </header>
+    </div>
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <br>
