giorni chiusura festività

--- a/menu/index.html
+++ b/menu/index.html
@@ -71,12 +71,12 @@
     </nav>
 <!-- fine navbar con hamburger -->
     <img class="image-hero" src="https://www.beerstrot.it/asset/img/large/menu.jpg" alt="Ca' Vecchia Beerstrot Hamburger doppio"/>
-    <div class="row">
+    <!-- <div class="row">
         <div class="medium-12 large-12 columns panel clearfix">
             <h1>Chiusura festività</h1>
             <p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 3, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
         </div>
-    </div>
+    </div> -->
     <div class="row">
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
