--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 	</header>
 <!-- fine header -->
 	<div class="panel-home-n">
-		<div class="row">
+		<!-- <div class="row">
 			<div class="medium-12 large-12 columns panel clearfix">
 				<h1>Chiusura festività</h1>
 				<p>Chiusi fino al 2 Gennaio compreso.<br> Aperti Venerdì 3, Sabato 4, Domenica 5 e Lunedì 6 Gennaio.</p>
 			</div>
-		</div>
+		</div> -->
 		<div class="row">
 			<div class="medium-12 large-12 columns">
 				<h1>Orari</h1>
