--- a/asporto/index.html
+++ b/asporto/index.html
@@ -93,8 +93,9 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
-                <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4>
+                <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+                <!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
+                <!-- <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
             <div class="medium-6 large-6 columns">
