chiusura ristorante temporanea

--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="medium-6 large-6 columns">
+			<!-- <div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
 				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
-			</div>
+			</div> -->
 			<div class="medium-6 large-6 columns">
 				<h2>Asporto e Consegne</h2>
 				<!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
 				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
-				<h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+				<h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: dalle 19:00 alle 21:30</h4>
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
-				<p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
+				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
 			</div>
 		</div>
 		<div class="row">
@@ -217,11 +217,11 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 					<li>
-                        <h4 class="subheader">Orari apertura</h4>
+                        <h4 class="subheader">Asporto e Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 21:30</p>
                             </div>
                         </div>
                     </li>
