--- a/menu/index.html
+++ b/menu/index.html
@@ -81,15 +81,16 @@
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
-            <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
+            <!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p> -->
+            <p>Momentaneamente effettuiamo solo Asporti e Consegne a Domicilio</p>
         </div>
     </div>
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <br>
-                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i>Chiama</a></span>
-                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
             </div>
         </div>
 <!-- inizio tabbar switch-->
@@ -474,9 +475,9 @@
 <!-- call to action inizio -->
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i>Chiama</a></span>
-                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
             </div>
         </div>
 <!-- call to action fine -->
@@ -493,11 +494,11 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 		  			<li>
-                        <h4 class="subheader">Orari apertura</h4>
+                        <h4 class="subheader">Asporto e Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 21:30</p>
                             </div>
                         </div>
                     </li>
