--- a/contatti/team/giulia-mazza.html
+++ b/contatti/team/giulia-mazza.html
@@ -84,11 +84,11 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 		  			<li>
-                        <h4 class="subheader">Orari apertura</h4>
+                        <h4 class="subheader">Asporto e Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 21:30</p>
                             </div>
                         </div>
                     </li>
