--- a/contatti/team/andrea-tagliazucchi.html
+++ b/contatti/team/andrea-tagliazucchi.html
@@ -88,7 +88,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 21:30</p>
+                                <p>Dal Martedì alla Domenica <br>Dalle 19:00 alle 21:00</p>
                             </div>
                         </div>
                     </li>
