--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<h2>Asporto e Consegne</h2>
 				<!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
 				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
-				<h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: dalle 19:00 alle 21:30</h4>
+				<h4><strong>Tutti i giorni</strong>: dalle 19:00 alle 21:00. Chiusi il Lunedì.</h4>
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
 			</div>
@@ -221,7 +221,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 21:30</p>
+                                <p>Dal Martedì alla Domenica <br>Dalle 19:00 alle 21:00</p>
                             </div>
                         </div>
                     </li>
