--- a/asporto/index.html
+++ b/asporto/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Sabato</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
+                <h4><strong>Tutti i giorni</strong>: dalle 19:00 alle 21:00. Chiusi il Lunedì.</h4>
                 <!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
                 <!-- <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
@@ -325,7 +325,7 @@
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 21:30</p>
+                                <p>Dal Martedì alla Domenica <br>Dalle 19:00 alle 21:00</p>
                             </div>
                         </div>
                     </li>
