--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<h2>Asporto e Consegne</h2>
 				<!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
 				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
-				<h4><strong>Tutti i giorni</strong>: dalle 19:00 alle 21:00. Chiusi il Lunedì.</h4>
+				<h4><strong>Tutti i giorni</strong>: dalle 19:00 alle 21:00. <br>Chiusi il Lunedì.</h4>
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
 			</div>
